tests/ui/error-codes/E0430.rs
use std::fmt::{self, self}; //~ ERROR E0430
                            //~^ ERROR E0252

fn main () {
}
